コミットの練習

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,48 @@
 *.user
 *.suo
 *.vs/
+# C# build output
+[Bb]in/
+[Oo]bj/
+
+# Visual Studio Code
+.vscode/
+
+# Rider
+.idea/
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Rr]elease/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+Log/
+
+# NuGet Packages
+*.nupkg
+# The packages folder can be ignored because of Package Restore
+**/packages/*
+# except build/, which is used as an MSBuild target.
+!**/packages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/packages/repositories.config
+
+# Windows files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Optional: if you generate documentation files
+*.pdf
+*.doc
+*.docx
