feat: Remove NyaLIZA files from TEST02 project

--- a/TEST02/TEST02.csproj
+++ b/TEST02/TEST02.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
-    <AssemblyName>セラピストNyaLIZA</AssemblyName>
+    <AssemblyName>NyaLIZA</AssemblyName>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
